# multimodal-rag-

./: README.md  multimodal_rag_jina.py  preprocess_docs.py  pyproject.toml  utils.py
data/: CV_EN_FULL_Daniel_Lima_2024_updated.pdf:Zone.Identifier
