[tool.poetry]
name = "jina-embeddings"
version = "0.1.0"
description = ""
authors = ["lemberck <blemberck@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain-unstructured = "^0.1.5"
unstructured = {extras = ["pdf"], version = "^0.15.13"}
python-dotenv = "^1.0.1"
langchain = "^0.3.2"
langchain-community = "^0.3.1"
docarray = "^0.40.0"
openai = "^1.51.1"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
